--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "request": ">=2.36.0",
-    "xml2js": ">=0.4.3"
+    "xml2js": ">=0.4.3",
+    "node-syslog": "1.1.7"
   },
   "repository": {
     "type": "git",
