--- a/config.example.json
+++ b/config.example.json
@@ -4,5 +4,6 @@
   "interval": 5,
   "recalc_after": 20,
   "logging": true,
-  "endpoint": "http://local.next.tn.com.ar/nsc/save_counts"
+  "endpoint": "http://local.next.tn.com.ar/nsc/save_counts",
+  "safe_hosts": ["tn.com.ar", "prepro.tn.com.ar", "local.next.tn.com.ar", "local.stable.tn.com.ar", "pre.tn.com.ar"]
 }
