Improved logging; facebook graph api usage, fql deprecated

--- a/config.example.json
+++ b/config.example.json
@@ -3,7 +3,8 @@
   "host":     "127.0.0.1",
   "interval": 5,
   "recalc_after": 20,
-  "logging": true,
+  "logLevel": ["INFO", "ERROR", "DEBUG"],
+  "syslog": true,
   "endpoint": "http://local.stable.tn.com.ar/nsc/save_counts",
   "fb_timeout": 5, 
   "tw_timeout": 5, 
