--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "request": ">=2.36.0",
     "xml2js": ">=0.4.3",
-    "node-syslog": "1.1.7"
+    "node-syslog": "1.1.7",
+    "underscore": "1.7.0"
   },
   "repository": {
     "type": "git",
